feat: :sparkles: last commit

--- a/index.html
+++ b/index.html
@@ -68,11 +68,8 @@
             <h2 class="section-title">Sobre mí</h2>
             <div class="about-content">
                 <div class="about-image">
-                    <div class="profile-placeholder">
-                        <img src="./assets/image.jpeg" alt="Foto de perfil">
-                    </div>
+                    <div class="profile-placeholder"></div>
                 </div>
-
                 <div class="about-text">
                     <p>
                         Soy un desarrollador full stack apasionado por crear soluciones tecnológicas eficientes. 
